<resources>
    <string name="app_name">QRCode</string>

    <string name="main_scan">Scan</string>
    <string name="main_history">History</string>
    <string name="main_discover">Discover</string>
    <string name="main_me">Me</string>

    <string name="app_text_secure">Secure</string>
    <string name="app_text_insecure">Insecure</string>
    <string name="app_text_secure_message">The QRCode is security, please feel free to visit</string>
    <string name="app_text_insecure_message">The QRCode is not safe, please be careful</string>
    <string name="app_text_icp">ICP:</string>
    <string name="app_text_icp_null">No ICP</string>
    <string name="app_text_home_url">HomeUrl:</string>
    <string name="app_text_home_url_null">No HomeUrl</string>
    <string name="app_text_comment">Comment:</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
